monticore-generator/src/test/resources/cocos/invalid/A4047/A4047f.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4047;

grammar A4047f {

  D;

  interface B = D+;

  BImpl implements B = D;

}